--- a/vue3/practice/my-practice/index.html
+++ b/vue3/practice/my-practice/index.html
@@ -6,6 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vue</title>
+  <style>
+    body {
+      position: relative;
+    }
+  </style>
 </head>
 
 <body>
